--- a/config.yml.dist
+++ b/config.yml.dist
@@ -1,13 +1,15 @@
 
 # Configuration directives used to retrieve Gauquelin data (5th edition) from cura.free.fr
 
-
 # Source directory
 # Absolute path to directory containing the html pages, as retrieved without modification from cura.free.fr
 source-dir: /path/to/html/pages
 
-
 # Output directory
 # Absolute path to directory containing the generated csv files
 dest-dir: /path/to/generated/csv/files
+
+# Should the program try to match birth places with geonames.org data ?
+# Possible values : true or false
+geonames: false
 
