--- a/config.yml.dist
+++ b/config.yml.dist
@@ -4,13 +4,13 @@
 
 # Directories where the files are stored
 dirs:
-  1-cura-raw:         /path/to/data/1-cura.free.fr/html-2017-04-26
-  2-cura-exported:    /path/to/data/2-cura-exported
-  3-cura-modified:    /path/to/data/3-cura-modified
-  4-1955-generated:   /path/to/data/4-1955-generated
-  5-1955-modified:    /path/to/data/5-1955-modified
-  6-1955-final:       /path/to/data/6-1955-final
-  6-cura-final:       /path/to/data/6-cura-final
+  1-cura-raw:               /path/to/data/1-cura.free.fr/html-2017-04-26
+  2-cura-exported:          /path/to/data/2-cura-exported
+  3-cura-marked:            /path/to/data/3-cura-marked
+  4-1955-generated:         /path/to/data/4-1955-generated
+  5-1955-cura-corrected:    /path/to/data/5-1955-cura-corrected
+  6-1955-final:             /path/to/data/6-1955-final
+  6-cura-final:             /path/to/data/6-cura-final
 
 # Should the program try to match birth places with geonames.org data ?
 # Possible values : true or false
