Continue manual corrections to 570SPO

--- a/config.yml.dist
+++ b/config.yml.dist
@@ -30,6 +30,7 @@ postgresql:
 1955:
   
   # Sorting used in generated csv files
+  # used by Serie1955::marked21955()
   sort: 
     576MED: NAME
     508MED: NAME
