--- a/config.yml.dist
+++ b/config.yml.dist
@@ -4,13 +4,13 @@
 
 # Directories where the files are stored
 dirs:
-  1-cura-raw:               /path/to/data/1-cura.free.fr/html-2017-04-26
-  2-cura-exported:          /path/to/data/2-cura-exported
-  3-cura-marked:            /path/to/data/3-cura-marked
-  4-1955-generated:         /path/to/data/4-1955-generated
-  5-1955-cura-corrected:    /path/to/data/5-1955-cura-corrected
-  9-1955-final:             /path/to/data/9-1955-final
-  9-cura-final:             /path/to/data/9-cura-final
+  1-cura-raw:               data/1-cura.free.fr
+  2-cura-exported:          data/2-cura-exported
+  3-cura-marked:            data/3-cura-marked
+  4-1955-generated:         data/4-1955-generated
+  5-1955-cura-corrected:    data/5-1955-cura-corrected
+  9-1955-final:             data/9-1955-final
+  9-cura-final:             data/9-cura-final
 
 # Should the program try to match birth places with geonames.org data ?
 # Possible values : true or false
