--- a/config.yml.dist
+++ b/config.yml.dist
@@ -29,21 +29,21 @@ postgresql:
 #
 raw2exported:
   
-  # Possible values : full or small
   report:
+    # For serie A, possible values = full or small
     A1: small
     A2: small
     A3: small
     A4: small
     A5: small
     A6: small
-  
-  # Should the result include columns
-  # containing planetary sectors ?
-  # Possible values : true or false
-  add-planetary-sectors:
-    E1: true
-    E3: true
+    # For serie E, possible values = full, small, tz, geo
+    # tz : echoes the records for which timezone information is missing
+    # geo : echoes the records for which geonames matching couldn't be done
+    # full : equivalent to tz and geo
+    # small : echoes only global results
+    E1: small
+    E3: small
     
 #
 # Settings specific to 1955 groups
