--- a/config.yml.dist
+++ b/config.yml.dist
@@ -4,13 +4,14 @@
 
 # Directories where the files are stored
 dirs:
-  1-cura-raw:               data/1-cura-raw
-  2-cura-exported:          data/2-cura-exported
-  3-cura-marked:            data/3-cura-marked
-  4-1955-generated:         data/4-1955-generated
-  5-1955-cura-corrected:    data/5-1955-cura-corrected
-  9-1955-final:             data/9-1955-final
-  9-cura-final:             data/9-cura-final
+  1-cura-raw:              data/1-cura-raw
+  2-cura-csv:               data/2-cura-csv
+  3-cura-marked:           data/3-cura-marked
+  4-1955-generated:       data/4-1955-generated
+  5-1955-edited:           data/5-1955-edited
+  9-1955-original:         data/9-1955-original
+  9-1955-corrected:        data/9-1955-corrected
+  9-cura-corrected:        data/9-cura-corrected
 
 # geoname.org parameters
 geonames:
@@ -27,9 +28,9 @@ postgresql:
   dbname: pg_dbname
 
 #
-# Settings specific to step raw2exported
+# Settings specific to step raw2csv
 #
-raw2exported:
+raw2csv:
   
   report:
     # For serie A, possible values = full or small
@@ -53,7 +54,7 @@ raw2exported:
 1955:
   
   # Sorting used in generated csv files
-  # used by Serie1955::marked21955()
+  # used by Serie1955::marked2generated()
   sort: 
     576MED: NAME
     508MED: NAME
