--- a/config.yml.dist
+++ b/config.yml.dist
@@ -3,15 +3,19 @@
 #
 
 # Directories where the files are stored
+# Absolute paths or paths relative to gauquelin5 root directory
 dirs:
-  1-cura-raw:              data/1-cura-raw
-  2-cura-csv:               data/2-cura-csv
-  3-cura-marked:           data/3-cura-marked
-  4-1955-generated:       data/4-1955-generated
-  5-1955-edited:           data/5-1955-edited
-  9-1955-original:         data/9-1955-original
-  9-1955-corrected:        data/9-1955-corrected
-  9-cura-corrected:        data/9-cura-corrected
+  1-cura-raw:           data/1-raw/cura.free.fr
+  #
+  3-cura-marked:        data/3-edited/cura-marked
+  3-g55-edited:         data/3-edited/g55-edited
+  #
+  5-cura-csv:           data/5-tmp/cura-csv
+  5-g55-generated:      data/5-tmp/g55-generated
+  5-geonames            data/5-tmp/geonames
+  #
+  9-g55-original:       data/9-output/history/1955-gauquelin/g55-original
+  9-cura-corrected:     data/9-output/datasets/cura-corrected
 
 # geoname.org parameters
 # see http://www.geonames.org/login
