Start study of newalch 4391ertel

--- a/config.yml.dist
+++ b/config.yml.dist
@@ -13,6 +13,7 @@ dirs:
   #
   5-cura-csv:           data/5-tmp/cura-csv
   5-g55-generated:      data/5-tmp/g55-generated
+  5-newalch-csv:        data/5-tmp/newalch-csv
   5-geonames:           data/5-tmp/geonames
   #
   9-g55-original:       data/9-output/history/1955-gauquelin/g55-original
