--- a/config.yml.dist
+++ b/config.yml.dist
@@ -17,6 +17,9 @@ dirs:
   5-newalch-csv:        data/5-tmp/newalch-csv
   5-geonames:           data/5-tmp/geonames
   5-full:               data/5-tmp/full
+  5-cp:                 data/5-tmp/cp
+  5-csicop:             data/5-tmp/csicop
+  5-cfepp:              data/5-tmp/cfepp
   #
   9-g55-original:       data/9-output/history/1955-gauquelin/g55-original
   9-cura-corrected:     data/9-output/datasets/cura-corrected
