Continue g55 edited2cura (ex cura g552csv) + doc

--- a/share/yaml/data/groups/gauquelin-occupations.yml
+++ b/share/yaml/data/groups/gauquelin-occupations.yml
@@ -157,6 +157,12 @@
   belongs-to:
     - SP
 -
+  code: FEM
+  fr: Sports féminins
+  en: Female sports
+  belongs-to:
+    - SP
+-
   code: FOO
   fr: Football
   en: Football
