--- a/config.yml.dist
+++ b/config.yml.dist
@@ -23,6 +23,7 @@ dirs:
   5-cfepp:              data/5-tmp/cfepp
   #
   9-cura:               data/9-output/datasets/cura
+  9-newalch:            data/9-output/datasets/newalchemypress
   9-g55-original:       data/9-output/history/1955-gauquelin/g55-original
 
 # geoname.org parameters
