--- a/data/3-edited/cura-tweaked/A1.yml
+++ b/data/3-edited/cura-tweaked/A1.yml
@@ -1,25 +1,27 @@
-
-
-# human corrections
+#
+# Human corrections to file A1
+# Fields sorted by NUM
+# 
+# 2019, Thierry Graff : Creation
+#
 
 -
   NUM: 223
   FNAME: de Saint-Exupery
   GNAME: Antoine
-  toto: titi
   
 -
   NUM: 214
   FNAME: Pelletier-Doisy
   GNAME: Georges
-  notes:
+  build-notes:
     - https://fr.wikipedia.org/wiki/Georges_Pelletier-Doisy
   
 -
   NUM: 268   
   FNAME: Beonio Brocchieri
   GNAME: Vittorio
-  notes:
+  build-notes:
     - https://www.wikidata.org/wiki/Q4015296
     - Appears as a journalist and historian in wikidata, listed as an aviator in Gauquelin
   
@@ -27,223 +29,223 @@
   NUM: 298
   FNAME: Casagrande 
   GNAME: Eugenio
-  notes:
+  build-notes:
     -  Eugenio Casagrande, conte di Villaviera
   
 -
   NUM: 322
   FNAME: Cornaggia Medici
   GNAME: Alfonso
-  notes:
+  build-notes:
     -
   
 -
   NUM: 336
   FNAME: Denti Pirajno
   GNAME: Salvatore
-  notes:
+  build-notes:
     -
   
 -
   NUM: 344
   FNAME: Ferretti di C. Piero
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 363
   FNAME: Gilbert Ewinckel Igino
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 370 
   FNAME: Grassi Fonseca Amilcare
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 373
   FNAME: Graziani del Borgo Carlo
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 375
   FNAME: Guerritore Revello Carlo
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 378
   FNAME: Keller Kellerer Guido
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 427
   FNAME: Negrone Cambiaso Carina
   GNAME: 
-  notes:
+  build-notes:
     -                                
   
 -
   NUM: 432
   FNAME: Novellis Coarazze Alberto
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 478
   FNAME: Scalpinelli Leguigna Pietro
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 482
   FNAME: Sibilla Massiera Giulio
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 505
   FNAME: Visconti Modrone Marcello
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 1999
   DATE: '1923-01-30 02:00:00+00:00'
-  notes:
+  build-notes:
     - Fix a date error in cura file A1 ; 1923-01-30 conform to G55, wikipedia and CFEPP
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 -
   NUM: 
   FNAME: 
   GNAME: 
-  notes:
+  build-notes:
     -
   
 
