--- a/config.yml.dist
+++ b/config.yml.dist
@@ -8,20 +8,22 @@ dirs:
   1-cura-raw:           data/1-raw/cura.free.fr
   1-newalch-raw:        data/1-raw/newalchemypress.com
   1-wd-raw:             data/1-raw/wikidata.org
-  #
+  
   3-cura-marked:        data/3-edited/cura-marked
   3-cura-tweaked:       data/3-edited/cura-tweaked
+  3-newalch-tweaked:    data/3-edited/newalch-tweaked
   3-g55-edited:         data/3-edited/g55-edited
-  #
+  
   5-cura-csv:           data/5-tmp/cura-csv
   5-g55-generated:      data/5-tmp/g55-generated
   5-newalch-csv:        data/5-tmp/newalch-csv
   5-geonames:           data/5-tmp/geonames
-  7-full:               data/5-tmp/full
   5-cp:                 data/5-tmp/cp
   5-csicop:             data/5-tmp/csicop
   5-cfepp:              data/5-tmp/cfepp
-  #
+  
+  7-full:               data/5-tmp/full
+  
   9-cura:               data/9-output/datasets/cura
   9-newalch:            data/9-output/datasets/newalchemypress
   9-g55-original:       data/9-output/history/1955-gauquelin/g55-original
