Add g55 570SPO genCorr + doc

--- a/share/yaml/data/groups/gauquelin-occupations.yml
+++ b/share/yaml/data/groups/gauquelin-occupations.yml
@@ -1,6 +1,6 @@
 
 #
-# File used to generate code related to profession
+# File used to generate codes related to occupation (profession)
 #
 
 # General categories
