--- a/config.yml.dist
+++ b/config.yml.dist
@@ -27,6 +27,7 @@ dirs:
   9-cura:               data/9-output/datasets/cura
   9-newalch:            data/9-output/datasets/newalchemypress
   9-g55-original:       data/9-output/history/1955-gauquelin/g55-original
+  9-g55-corrected:      data/9-output/history/1955-gauquelin/g55-corrected
 
 # geoname.org parameters
 # only useful for the steps which call geonames.org web service
