--- a/config.yml.dist
+++ b/config.yml.dist
@@ -8,6 +8,7 @@ dirs:
   1-cura-raw:           data/1-raw/cura.free.fr
   1-newalch-raw:        data/1-raw/newalchemypress.com
   1-wd-raw:             data/1-raw/wikidata.org
+  1-si-raw:             data/1-raw/skepticalinquirer.org
   
   3-cura-marked:        data/3-edited/cura-marked
   3-cura-tweaked:       data/3-edited/cura-tweaked
