--- a/config.yml.dist
+++ b/config.yml.dist
@@ -26,6 +26,8 @@ dirs:
   
   7-full:               data/5-tmp/full
   
+  8-acts:               data/8-acts
+
   9-cura:               data/9-output/datasets/cura
   9-newalch:            data/9-output/datasets/newalchemypress
   9-g55-original:       data/9-output/history/1955-gauquelin/g55-original
