--- a/src/model/Person.yml
+++ b/src/model/Person.yml
@@ -1,14 +1,15 @@
 
 
-name:   # usual, current name
-g:      # gender
-fname:  # family name
-gname:  # given name
-official-name:  # As written in the birth certificate
-alternative-names: []
-nickname:
-fame-name:
-nobility:
+name:
+  usual:
+  given:
+  family:
+  spouse:
+  official: # As written in the birth certificate
+  nobility:
+  fame: # stage, scene
+  nickname:
+  alternative: []
 
 occus: []
 
@@ -24,7 +25,7 @@ birth:
     geoid:
     lg:
     lat:
-
+                                                                                                                                                       
 ids: []
   
 sources: []
