Generate 402-it-writers.csv from 7-full

--- a/src/model/Group.yml
+++ b/src/model/Group.yml
@@ -1,3 +1,20 @@
+document:
+  history: []
+
+# unique within db5
 uid: 
+
+# unique within groups
+id: 
+
+name:
+
+description: |
+  
+N: 
+
+source:
+  parent:
+  notes: |
 
 members: []
