--- a/config.yml.dist
+++ b/config.yml.dist
@@ -2,41 +2,23 @@
 # Configuration for https://github.com/tig12/gauquelin5
 #
 
-# Directories where the files are stored
+# Directories where data files are stored
 # Absolute paths or paths relative to gauquelin5 root directory
 dirs:
-  1-raw:                data/1-raw
-  1-cura-raw:           data/1-raw/cura.free.fr
-  1-newalch-raw:        data/1-raw/newalchemypress.com
-  1-wd-raw:             data/1-raw/wikidata.org
-  1-si-raw:             data/1-raw/csicop/si42
-  1-irving-raw:         data/1-raw/csicop/irving
-  
-  3-cura-marked:        data/3-edited/cura-marked
-  3-cura-tweaked:       data/3-edited/cura-tweaked
-  3-newalch-tweaked:    data/3-edited/newalch-tweaked
-  3-g55-edited:         data/3-edited/g55-edited
-  
-  5-cura-csv:           data/5-tmp/cura-csv
-  5-g55-generated:      data/5-tmp/g55-generated
-  5-newalch-csv:        data/5-tmp/newalch-csv
-  5-geonames:           data/5-tmp/geonames
-  5-cp:                 data/5-tmp/cp
-  5-csicop:             data/5-tmp/csicop
-  5-cfepp:              data/5-tmp/cfepp
-  
-  7-full:               data/5-tmp/full
-  
-  8-acts:               data/8-acts
+  raw:    data/raw
+  edited: data/edited
+  output: data/output
 
-  9-cura:               data/9-output/datasets/cura
-  9-newalch:            data/9-output/datasets/newalchemypress
-  9-g55-original:       data/9-output/history/1955-gauquelin/g55-original
-  9-g55-corrected:      data/9-output/history/1955-gauquelin/g55-corrected
-  9-cpara:              data/9-output/history/1976-cpara
-  9-cfepp:              data/9-output/history/1996-cfepp
-  9-csicop:             data/9-output/history/1979-csicop
-  9-muller402:          data/9-output/history/1991-muller
+
+# g5 database
+db5:
+  postgresql: 
+    dbhost: localhost
+    dbport: 5432
+    dbuser: pg_username
+    dbpassword: pg_password
+    dbname: pg_dbname
+
 
 # geoname.org parameters
 # only useful for the steps which call geonames.org web service
@@ -55,4 +37,5 @@ geonames:
     dbuser: pg_username
     dbpassword: pg_password
     dbname: pg_dbname
+    
     
