Start porting Cura import to g5 db

--- a/data/edited/cura-tweaked/A1.yml
+++ b/data/edited/cura-tweaked/A1.yml
@@ -48,78 +48,78 @@
   
 -
   NUM: 344
-  FNAME: Ferretti di C. Piero
-  GNAME: 
+  FNAME: Ferretti di C.
+  GNAME: Piero
   build-notes:
     -
   
 -
   NUM: 363
-  FNAME: Gilbert Ewinckel Igino
-  GNAME: 
+  FNAME: Gilbert Ewinckel                 
+  GNAME: Igino
   build-notes:
     -
   
 -
   NUM: 370 
-  FNAME: Grassi Fonseca Amilcare
-  GNAME: 
+  FNAME: Grassi Fonseca
+  GNAME: Amilcare
   build-notes:
     -
   
 -
   NUM: 373
-  FNAME: Graziani del Borgo Carlo
-  GNAME: 
+  FNAME: Graziani del Borgo
+  GNAME: Carlo
   build-notes:
     -
   
 -
   NUM: 375
-  FNAME: Guerritore Revello Carlo
-  GNAME: 
+  FNAME: Guerritore Revello
+  GNAME: Carlo
   build-notes:
     -
   
 -
   NUM: 378
-  FNAME: Keller Kellerer Guido
-  GNAME: 
+  FNAME: Keller Kellerer
+  GNAME: Guido
   build-notes:
     -
   
 -
   NUM: 427
-  FNAME: Negrone Cambiaso Carina
-  GNAME: 
+  FNAME: Negrone Cambiaso
+  GNAME: Carina
   build-notes:
     -                                
   
 -
   NUM: 432
-  FNAME: Novellis Coarazze Alberto
-  GNAME: 
+  FNAME: Novellis Coarazze
+  GNAME: Alberto
   build-notes:
     -
   
 -
   NUM: 478
-  FNAME: Scalpinelli Leguigna Pietro
-  GNAME: 
+  FNAME: Scalpinelli Leguigna
+  GNAME: Pietro
   build-notes:
     -
   
 -
   NUM: 482
-  FNAME: Sibilla Massiera Giulio
-  GNAME: 
+  FNAME: Sibilla Massiera
+  GNAME: Giulio
   build-notes:
     -
   
 -
   NUM: 505
-  FNAME: Visconti Modrone Marcello
-  GNAME: 
+  FNAME: Visconti Modrone
+  GNAME: Marcello
   build-notes:
     -
   
@@ -141,119 +141,3 @@
     Birth day conform with
     CFEPP book
     https://fr.wikipedia.org/wiki/Maurice_Terreau
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
--
-  NUM: 
-  FNAME: 
-  GNAME: 
-  build-notes:
-    -
-  
-
-  
-  
