--- a/data/edited/source/web/newalch.yml
+++ b/data/edited/source/web/newalch.yml
@@ -3,7 +3,9 @@ document:
   history:
     - 2020-08-11 08:15:11+02:00: Thierry Graff, creation
 
-name: newalchemypress
+name: newalchemypress.com
 slug: newalch
 description: |
   Web site https://newalchemypress.com/
+source:
+  parents: []
