Add csv generation by occupation + cleaning
- Add data/db to versioned files
- Clean a bit directory share/

--- a/config.yml.dist
+++ b/config.yml.dist
@@ -10,6 +10,8 @@ dirs:
   db:     data/db
   output: data/output
   tmp:    data/tmp
+  # Auxiliary files - versioned in an other git repository
+  aux:    /path/to/g5-aux
 
 
 # g5 database
