--- a/data/db/occu.yml
+++ b/data/db/occu.yml
@@ -1,6 +1,6 @@
 
 #
-# File used to generate codes related to occupation (profession)
+# Contains the occupation (profession) codes manipulated by g5
 #
 
 # General categories
