Add muller402 tmp2db

--- a/data/db/source/booklet/Astro-Forschungs-Daten.yml
+++ b/data/db/source/booklet/Astro-Forschungs-Daten.yml
@@ -4,7 +4,7 @@ document:
     - 2020-05-16 01:32:26+02:00, Thierry Graff : Creation
 
 name: Astro-Forschungs-Daten
-slug: afd
+slug: AFD
 description: |
   Five booklets self-published by Arno Müller, 1991 - 1994
   5 volumes containing 3476 birth times
