Continue math eminence ranking: imporve existing lists

--- a/data/model/source/eminence/math/bourbaki.yml
+++ b/data/model/source/eminence/math/bourbaki.yml
@@ -1,18 +1,26 @@
-
 document:
   history:
     - 2020-11-26 22:33:59+01:00: Thierry Graff, creation
 
-name: bourbaki.txt
 slug: bourbaki-histoire
+# name: bourbaki.txt
+
+type: book
+
+title: Éléments d'histoire des Mathématiques
+author: Nicolas Bourbaki
+edition: |
+  Springer
+  2007 (3rd edition ; reprint from 1984 version, ed. Masson)
+isbn:          
+
 description: |
-  List of mathematicians ranked by citation count in book :
-    Éléments d'histoire des Mathématiques
-    by Nicolas Bourbaki
-    Ed. Springer
-    2007 (3rd edition ; reprint from 1984 version, ed. Masson)
-    
-    Uses the "INDEX DES NOMS CITÉS", pp 366 - 376 of the book  
+  This book was used to count the number of times each mathematician is cited in the book index
+  "INDEX DES NOMS CITÉS", pp 366 - 376 of the book
+  
+  See https://tig12.github.io/gauquelin5/eminence-math.html
+  See https://g5.tig12.net/auxiliary/eminence/math/bourbaki
+
 source:
   parents: []
   
